2006-08-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/doc/asxhtm.html: documented changed ABS behaviour
	* as/doc/README: fixed some typos

2006-08-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/float_trans.c: disabled test if __STDC_IEC_559__
	  not defined on host

2006-08-12 Borut Razem <borut.razem AT siol.net>

	* support/regression/fwk/include/testfwk.h,
	  support/regression/fwk/lib/testfwk.c,
	  support/regression/generate-cases.py,
	  support/regression/Makefile.in:
	  regression test framework does not depend on function pointers and
	  variable arguments

2006-08-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/stddef.h: c temporary hack to fix bug 1518273

2006-08-09 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/cc2510fx.h: added
	* src/z80/z80.dsp, src/gbz80/gbz80.dsp: added support/Util/strcmpi.ch
	  to projects.

2006-08-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/z80/assym.c (mlookup): ignore case when looking up mnemonics
	* as/z80/Makefile.in: added strcmpi.c
	* as/z80/z80adr.c: added upper case registers and lower case conditionals
	* support/Util/strcmpi.ch: added with intention to remove from mcs51/hc08

2006-08-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/gbz80/asm_strings.s,
	* device/lib/gbz80/crt0_rle.s,
	* device/lib/gbz80/div.s,
	* device/lib/gbz80/mul.s,
	* device/lib/gbz80/shift.s,
	* device/lib/z80/asm_strings.s,
	* device/lib/z80/crt0_rle.s,
	* device/lib/z80/div.s,
	* device/lib/z80/mul.s,
	* device/lib/z80/shift.s: changed to all lower case menmonics except the
	  flags which are all upper case

2006-08-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/z80/asm.h: made CASE_SENSITIVE 1
	* link/z80/aslink.h: made CASE_SENSITIVE 1
	* src/z80/gen.c (throughout): made all conditionals upper case
	* support/regression/tests/bug1503067.c: new

2006-08-07 Maarten Brock <sourceforge.brock AT dse.nl>
